# spoons-scraper

./: .pre-commit-config.yaml  README.md  build.py  docker-compose.yaml  pyproject.toml  spoons.csv
spoons_scraper/: __init__.py  exceptions.py  main.py  settings.py  types.py  website.py
spoons_scraper/postgres/: client.py
spoons_scraper/postgres/migrations/: V1__Create_spoons_table.sql  __init__.py
spoons_scraper/postgres/queries/: __init__.py  get_locations.sql  save_locations.sql
