[tool.poetry]
name = "spoons_scraper"
version = "0.1.0"
description = ""
authors = ["Dema Ushchapovskyy <dmytro.ushchapovskyy@clearmacro.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
pynt = "^0.8.2"
psycopg2-binary = "^2.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
