[tool.poetry]
name = "spoons_scraper"
version = "0.1.0"
description = ""
authors = ["Dema Ushchapovskyy <dmytro.ushchapovskyy@clearmacro.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
pynt = "^0.8.2"
psycopg2-binary = "^2.9.2"
click = "^8.0.3"
bs4 = "^0.0.1"
lxml = "^4.6.4"
backoff = "^1.11.1"
requests = "2.25.1"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
spoons_scraper = "spoons_scraper.main:main"
